--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
-* Add a Display element to the webpage
++ Add a Display element to the webpage
   - it should be bottom of view port
   - use it update score
-* For Score create a Game Model and maintain  score in it.
-  + whenever snake eats the food the score should increment by 10
-* for each and every time snake eats the food update the score display
-  + get score from game and then display it
-* Finally Don't Forget to commit
++ For Score create a Game Model and maintain  score in it.
+  - whenever snake eats the food the score should increment by 10
++ for each and every time snake eats the food update the score display
+  - get score from game and then display it
++ Finally Don't Forget to commit and push
